#
# Copyright (c) 2013 LinkedIn Corp. All rights reserved. 
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
# except in compliance with the License. You may obtain a copy of the license at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the
# License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
# either express or implied.
#

SUBDIRS = helloworld \
	  globalhook \
      transactionhook \
	  multiple_transaction_hooks \
	  data_caching \
	  clientrequest \
	  serverresponse \
	  clientredirect \
	  customresponse \
	  null_transformation_plugin \
	  post_buffer \
	  logger_example \
      detachedrequest \
	  stat_example \
      remap_plugin \
	  async_http_fetch \
	  gzip_transformation \
	  timeout_example \
          internal_transaction_handling \
          async_timer \
          request_cookies
